# rag-pipeline

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
api/: main.py  schemas.py
app/: main.py
backend/: core.py  ingestion.py  jobs.py  logger.py  rabbitmq.py  selection.py  worker.py
tests/: conftest.py  smoke_test.py  test_api_smoke.py  test_async_job_flow_integration.py  test_dlq_integration.py  test_ingestion.py  test_jobs.py  test_rabbitmq.py  test_worker.py
