[project]
name = "documentation-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "google-genai>=1.60.0",
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.13",
    "streamlit>=1.51.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
